[package]
name = "myrulesiothome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.12.0", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "net", "time"] }
rumqttc = "0.8.0"
chrono = "0.4.19"
serde = { version ="1.0.130", features = ["derive"] }
serde_json = "1.0"
config = "0.14.0"

myrulesiot = { path = "../myrulesiot" }
